apps/base/shippingservice/shippingservice-ingress-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shippingservice-ingress

spec:
  podSelector:
    matchLabels:
      app: shippingservice

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - protocol: TCP
          port: 50051
